AASES-Project/force-app/main/default/objects/MarkingSheet__c/MarkingSheet__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>RollNo__c</fullName>
        <label>Roll Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Student Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <label>Slot</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamType__c</fullName>
        <label>Exam Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalMarks__c</fullName>
        <label>Total Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks1__c</fullName>
        <label>Marks 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks2__c</fullName>
        <label>Marks 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks3__c</fullName>
        <label>Marks 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks4__c</fullName>
        <label>Marks 4</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks5__c</fullName>
        <label>Marks 5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks6__c</fullName>
        <label>Marks 6</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks7__c</fullName>
        <label>Marks 7</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks8__c</fullName>
        <label>Marks 8</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks9__c</fullName>
        <label>Marks 9</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks10__c</fullName>
        <label>Marks 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marking Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marking Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marking Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>