AASES-Project/force-app/main/default/objects/MarkingSheet__c/fields/Marks10__c.field-meta.xml
<CustomField>
    <fullName>Marks10__c</fullName>
    <label>Marks 10</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>