AASES-Project/force-app/main/default/objects/MarkingSheet__c/fields/Marks1__c.field-meta.xml
<CustomField>
    <fullName>Marks1__c</fullName>
    <label>Marks 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>