AASES-Project/force-app/main/default/objects/MarkingSheet__c/fields/Marks2__c.field-meta.xml
<CustomField>
    <fullName>Marks2__c</fullName>
    <label>Marks 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>