AASES-Project/force-app/main/default/objects/MarkingSheet__c/fields/RollNo__c.field-meta.xml
<CustomField>
    <fullName>RollNo__c</fullName>
    <label>Roll Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>