AASES-Project/force-app/main/default/objects/MarkingSheet__c/fields/TotalMarks__c.field-meta.xml
<CustomField>
    <fullName>TotalMarks__c</fullName>
    <label>Total Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>